# ChaosModV

./: .gitignore  .gitmodules  ChaosMod.sln
ChaosMod/: CMakeLists.txt  ChaosMod.vcxproj  Info.h  LuaScripts.cpp  Main.cpp  Main.h  Mp3Manager.cpp  dllexports.cpp  dllexports.h  vcpkg.json
ChaosMod/Components/: Component.h  CrossingChallenge.cpp  CrossingChallenge.h  DebugMenu.cpp  DebugSocket.cpp  DispatchSocket.cpp  DispatchSocket.h  EffectDispatchTimer.cpp  EffectDispatchTimer.h  EffectDispatcher.cpp  EffectDispatcher.h  EntityTracking.cpp  EntityTracking.h  HelpTextQueue.cpp  HelpTextQueue.h  LuaScripts.cpp  LuaScripts.h  MetaModifiers.h  RemoteDispatcher.cpp  RemoteDispatcher.h  ShortCut.cpp  SplashTexts.cpp  SplashTexts.h  TwitchVoting.cpp  TwitchVoting.h  Voting.cpp  Voting.h  Workshop.cpp  ZChaosManager.cpp  ZChaosManager.h
ChaosMod/Components/EffectSound/: EffectSound3D.cpp  EffectSoundManager.cpp
ChaosMod/Effects/: Effect.h  EffectAttributes.h  EffectCategory.h  EffectConfig.h  EffectData.h  EffectGroups.h  EffectThreads.cpp  EffectThreads.h  EffectsInfo.h
ChaosMod/Effects/Condition/: ConditionEnhancedShader.cpp  ConditionSilentVotingEnabled.cpp  ConditionUsingDistanceTimer.cpp  ConditionUsingTimeTimer.cpp  ConditionVotingDisabled.cpp  EffectCondition.h
ChaosMod/Effects/Register/: RegisterEffect.h  RegisteredEffects.h  RegisteredEffectsMetadata.h
ChaosMod/Effects/db/Meta/: MetaBonusRandomEffect.cpp  MetaBrokenRecord.cpp  MetaNoVote.cpp  (+5 more)
ChaosMod/Lib/: array.h
ChaosMod/Memory/: Audio.h  Entity.h  EntityFragments.h  Gameconfig.h  GetVector3.h  Memory.cpp  Memory.h  PedModels.h  Physics.h  RageSkeleton.h  Rain.h  UI.h  Vehicle.h  ViewMatrix.h  Water.h  Weapon.h  WeaponPool.h  WorldToScreen.h
ChaosMod/Memory/Allocator/: MemoryBuffer.cpp  MemoryBuffer.h
ChaosMod/Memory/Hooks/: AudioSettingsHook.cpp  GameSpeedHook.cpp  GameSpeedHook.h  GetLabelTextHook.cpp  GetLabelTextHook.h  GuidPoolSizeHook.cpp  MinimapHook.cpp  MinimapHook.h  MiscHooks.cpp  PreRenderHook.cpp  PreRenderHook.h  PresentHook.cpp  ScriptThreadRunHook.cpp  ShaderHook.cpp  ShaderHookEnhanced.cpp  ShaderHookEnhanced.h  TextOutlineHook.cpp  TextOutlineHook.h
ChaosMod/Util/: Building.h  DX12.cpp  DX12.h  EntityIterator.h  Events.h  HelpText.h  LuaAPI.h  Model.h  OptionDefaults.h  OptionsFile.h  OptionsManager.h  Peds.h  Player.h  PoolSpawner.cpp  PoolSpawner.h  Random.h  ScriptText.h  Text.h  TryParse.h  Types.h  Vehicle.h  Weapon.h
ChaosMod/Util/Chat/: ChatMessage.h  ChatMessageDeletion.h  ChatUserBan.h  Userstate.h
(+251 files in other folders)
